<resources>
    <string name="app_name">CoolPortfolio</string>
    <string name="menu_title">Discover\nCool Menu Below</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="bookmark">Bookmark</string>
    <string name="chat">Chat</string>
    <string name="greeting">Hi,</string>
    <string name="my_name_profile">John Doe</string>
    <string name="search">Search</string>
    <string name="news_exercise">Exercise</string>
</resources>