<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/grey_90"
        app:cnb_iconColor="@android:color/white" />

    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        app:cnb_backgroundColor="@color/grey_90"
        app:cnb_iconColor="@android:color/white" />

    <item
        android:id="@+id/bookmark"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/bookmark"
        app:cnb_backgroundColor="@color/grey_90"
        app:cnb_iconColor="@android:color/white" />

    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat"
        app:cnb_backgroundColor="@color/grey_90"
        app:cnb_iconColor="@android:color/white" />

</menu>