<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_page"
    android:clipToPadding="false"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/_16sdp"
        android:paddingBottom="@dimen/_16sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="@dimen/_46sdp"
                android:layout_height="@dimen/_46sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_photo_profile"
                app:civ_border="false" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/greeting"
                    android:textColor="@color/grey_90"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/poppinsregular" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_name_profile"
                    android:textColor="@color/grey_90"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/poppinsmedium" />

            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                app:srcCompat="@drawable/ic_notification"
                app:tint="@color/grey_90" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_edittext_rounded"
            android:drawableEnd="@drawable/ic_search"
            android:drawableTint="@color/grey_60"
            android:hint="@string/search"
            android:textColorHint="@color/grey_60"
            android:textColor="@color/grey_90"
            android:textSize="@dimen/_12ssp"
            android:inputType="text"
            android:maxLines="1"
            android:fontFamily="@font/poppinsregular"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_6sdp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:clipToPadding="true"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/sample_fashion" />

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="horizontal"
            android:clipToPadding="false" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_16sdp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>